# lazycoder-rs

lazycoder-be/: .env  Cargo.toml
lazycoder-be/src/: app.rs  config.rs  db.rs  main.rs  routes.rs  state.rs
lazycoder-be/src/controllers/: mod.rs  post_controller.rs  response_result.rs  user_controller.rs
lazycoder-be/src/infras/: mod.rs
lazycoder-be/src/infras/controllers/: auth_controller.rs  mod.rs  post_controller.rs  user_controller.rs
lazycoder-be/src/infras/crypto/: jwt_encoder.rs  mod.rs
lazycoder-be/src/infras/middleware/: auth_guard.rs
lazycoder-be/src/infras/repositories/: post_repository.rs  user_repository.rs
lazycoder-be/src/macros/: common_fields.rs  define_struct_with_common_fields.rs  mod.rs
lazycoder-be/src/migrations/: create_tables_v1.sql
lazycoder-be/src/repositories/: post_repository.rs  user_repository.rs
lazycoder-be/src/services/: auth_service.rs  mod.rs  post_service.rs  user_service.rs
lazycoder-fe/: Cargo.toml
