[package]
name = "lazycoder-be"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.11.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
lazy_static = "1.5.0"
leptos_actix = "0.8.2"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "time"] }
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
time = { version = "0.3.41", features = ["macros", "parsing", "formatting", "serde"] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["fast-rng", "serde", "v7"] }
